# DynRender-skia

./: .gitignore  DynStyle.py  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/actions/setup-python/: action.yml
.github/workflows/: codecov.yml  master.yml  python-publish.yml
Writerside/: DynRender_skia_document.tree  writerside.cfg
Writerside/cfg/: buildprofiles.xml
Writerside/topics/: starter-topic.md
dynrender/: Core.py  DynAdditional.py  DynConfig.py  DynHeader.py  DynMajor.py  DynStyle.py  DynText.py  DynTools.py
dynrender_skia/: Core.py  DynAdditional.py  DynConfig.py  DynHeader.py  DynMajor.py  DynRepost.py  DynStyle.py  DynText.py  DynTools.py  __init__.py  exception.py
sample/: sample.py
skia/: __init__.pyi  cms.pyi
test/: conftest.py  test_tools.py
test/res/: message.json
tests/: __init__.py  conftest.py  test_dynrender_run.py  test_skia_runtime_error.py  test_tools.py
tests/res/: message.json
